# socketGame3

./: README.md  client.py  main.py  pyproject.toml  server.py
.ws-tester/: main.py
backend/: .env  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
backend/src/: config.py  main.py
backend/src/api/: dependencies.py  ws.py
backend/src/api/rest/: auth.py  auth_v2.py  status.py
backend/src/engine/: GameProtocol.py  GameSessionManager.py  mapGenerator.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 2025_09_24_2221-9a723d75d51d_init.py  2025_09_24_2230-84876a5d3540_model_player_position.py
backend/src/models/: user.py
backend/src/repos/: base.py  user.py
backend/src/schemas/: user.py
backend/src/services/: auth.py  base.py
backend/src/storage/: players.py
backend/src/utils/: db_manager.py
client/: client.py  main.py  pyproject.toml  requirements.txt  setup.py
client/Utilities/Enums/: Colors.py  Rotation.py
client/engine/: GameProtocol.py
old_client/: pyproject.toml  setup.py
test_anitations/: main.py
test_anitations/UI/: CameraWindow.py
test_anitations/objects/: Player.py
